# CJM20

./: .envrc  .gitattributes  .gitignore  check_solution_milp.py  check_solution_svd.py  extract.py  pyproject.toml  train_models.py
flake_module/: devshell.nix  fmt.nix
hook/: pixi.sh
src/: find_witnesses.py  global_vars.py  hyperplane_normal.py  layer_recovery.py  refine_precision.py  sign_recovery.py  utils.py
