[project]
authors = [{ name = "Kh05ifr4nD", email = "meandSSH0219@gmail.com" }]
description = "Add a short description here"
name = "CJM20"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["jax>=0.5.0,<0.6"]


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-aarch64", "linux-64"]

[tool.pixi.pypi-dependencies]
cjm20 = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
networkx = ">=3.4.2,<4"
matplotlib = ">=3.10.0,<4"
# numpy = ">=2.2.2,<3"
# scipy = ">=1.15.1,<2"
# jax = ">=0.5"
# jaxlib = ">=0.5"
# matplotlib = ">=3.10.0,<4"
# networkx = ">=3.4.2,<4"
